# tidypress

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  RELEASING.md  SECURITY.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.changeset/: README.md  config.json
.ci/: build.yaml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  task.yml
.github/scripts/: assert-test-count.mjs
.github/workflows/: agent-os.yml  ci.yml  publish.yml  welcome.yml
apps/site/: docsmint-context.md  docsmint.config.ts  package.json  tidypress-context.md  tidypress.config.ts
docs/adr/: 004-python-runtime-independence.md  README.md
examples/: README.md
examples/blog/: .gitignore  README.md  package.json
examples/blog/docs/: docsmint.config.ts  tidypress.config.ts
examples/custom-collections/: README.md  package.json
examples/custom-collections/docs/: .gitignore  docsmint.config.ts  tidypress.config.ts
examples/i18n-versioned/: README.md  package.json
examples/i18n-versioned/docs/: docsmint.config.ts  tidypress.config.ts
examples/lab/: README.md  package.json
examples/minimal/: README.md  docsmint-context.md  docsmint.config.ts  package.json  tidypress-context.md
examples/persona/: .gitignore  README.md  package.json
scripts/: quickstart-demo.sh  registry-e2e.sh  setup-git-hooks.sh  setup-github-repo.sh  setup-registry-publishers.sh
scripts/git-hooks/: prepare-commit-msg
skills/: README.md
skills/tidypress/: SKILL.md  reference.md
skills/tidypress-contributor/: SKILL.md
wrappers/python/: README.md  pyproject.toml
wrappers/python/docsmint/: __init__.py  async_cli.py  cli.py  errors.py  help_text.py  python_commands.py  router.py  runtime.py  schema_validation.py  yaml_config.py
wrappers/python/docsmint/schemas/: docsmint-yaml.schema.json  init-presets.json
wrappers/python/tests/: test_async_cli.py  test_help_text.py  test_install_e2e.py  test_publish_root.py  test_python_commands.py  test_python_e2e.py  test_registry_e2e.py  test_router.py  test_runtime.py  test_schema_validation.py  test_yaml_config.py
wrappers/python/tidypress/: __init__.py  async_cli.py  cli.py  errors.py  help_text.py  publish_root.py  python_commands.py  router.py  runtime.py  schema_validation.py  yaml_config.py
wrappers/python/tidypress/schemas/: init-presets.json
(+72 files in other folders)
