[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "docsmint"
version = "0.1.14"
description = "Python interface for the DocsMint Node.js CLI."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "Raphael Avocegamou" }
]

[project.urls]
Homepage = "https://usedocsmint.pages.dev/"
Repository = "https://github.com/Raphjacksun7/docsmint"
Issues = "https://github.com/Raphjacksun7/docsmint/issues"

[project.scripts]
docsmint = "docsmint.cli:main"

[tool.setuptools.packages.find]
include = ["docsmint*"]
