[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "docsmint"
version = "1.0.3"
description = "Python interface for the DocsMint Node.js CLI."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Raphael Avocegamou" }
]
dependencies = ["PyYAML>=6.0"]

[project.urls]
Homepage = "https://usedocsmint.pages.dev/"
Repository = "https://github.com/Raphjacksun7/docsmint"
Issues = "https://github.com/Raphjacksun7/docsmint/issues"

[project.scripts]
docsmint = "docsmint.cli:main"

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.setuptools.packages.find]
include = ["docsmint*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
