[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tidypress"
version = "1.0.10"
description = "Python interface for the TidyPress Node.js CLI."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Raphael Avocegamou" }
]
dependencies = ["PyYAML>=6.0", "jsonschema>=4.23"]

[project.urls]
Homepage = "https://tidypress.pages.dev/"
Repository = "https://github.com/Raphjacksun7/tidypress"
Issues = "https://github.com/Raphjacksun7/tidypress/issues"

[project.scripts]
tidypress = "tidypress.cli:main"

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.setuptools.packages.find]
include = ["tidypress*"]

[tool.setuptools.package-data]
tidypress = ["schemas/*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
